add sphinx documentation

--- a/docs/notebooks/test_ObsAtmoEmulator.ipynb
+++ b/docs/notebooks/test_ObsAtmoEmulator.ipynb
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x153085c00>"
+       "<matplotlib.legend.Legend at 0x16a14eb60>"
       ]
      },
      "execution_count": 11,
@@ -286,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1569c8190>"
+       "<matplotlib.legend.Legend at 0x16a459660>"
       ]
      },
      "execution_count": 12,
@@ -341,7 +341,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x156a821d0>"
+       "<matplotlib.legend.Legend at 0x16a5121a0>"
       ]
      },
      "execution_count": 13,
@@ -432,7 +432,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x156c3b8b0>"
+       "<matplotlib.legend.Legend at 0x16a6cb940>"
       ]
      },
      "execution_count": 15,
@@ -522,7 +522,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x156e58a90>"
+       "<matplotlib.legend.Legend at 0x16a8ecdc0>"
       ]
      },
      "execution_count": 17,
@@ -601,7 +601,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x156f41e10>"
+       "<matplotlib.legend.Legend at 0x16a9d2920>"
       ]
      },
      "execution_count": 19,
@@ -646,7 +646,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x156fc0580>"
+       "<matplotlib.legend.Legend at 0x16a9a2230>"
       ]
      },
      "execution_count": 20,
