add the doc on the datagrid

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -271,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x106743100>"
+       "<matplotlib.legend.Legend at 0x15f3bbd60>"
       ]
      },
      "execution_count": 12,
@@ -330,7 +330,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1408b8910>"
+       "<matplotlib.legend.Legend at 0x15f4c88e0>"
       ]
      },
      "execution_count": 13,
@@ -393,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x14095be20>"
+       "<matplotlib.legend.Legend at 0x15f5936d0>"
       ]
      },
      "execution_count": 14,
@@ -484,7 +484,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x140b2a680>"
+       "<matplotlib.legend.Legend at 0x15f71db40>"
       ]
      },
      "execution_count": 16,
@@ -574,7 +574,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x140d55450>"
+       "<matplotlib.legend.Legend at 0x15f961720>"
       ]
      },
      "execution_count": 18,
@@ -653,7 +653,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x140d56c80>"
+       "<matplotlib.legend.Legend at 0x15fa3e5c0>"
       ]
      },
      "execution_count": 20,
@@ -706,7 +706,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x16c0bf970>"
+       "<matplotlib.legend.Legend at 0x15fac7d00>"
       ]
      },
      "execution_count": 21,
@@ -821,7 +821,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x16c142da0>"
+       "<matplotlib.legend.Legend at 0x15f639300>"
       ]
      },
      "execution_count": 24,
@@ -892,7 +892,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x16c1992d0>"
+       "<matplotlib.legend.Legend at 0x15fb98df0>"
       ]
      },
      "execution_count": 25,
