--- a/docs/source/notebooks/intro_notebook.ipynb
+++ b/docs/source/notebooks/intro_notebook.ipynb
@@ -10,7 +10,7 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2023/11/01\n",
-    "- last update : 2023/11/01\n",
+    "- last update : 2023/11/02\n",
     "\n",
     "\n",
     "This emulator is based from datagrid of atmospheric transparencies extracted from libradtran"
@@ -82,7 +82,7 @@
    "id": "b0a9c40d-f5f4-4aca-b4fa-de020205e534",
    "metadata": {},
    "source": [
-    "# Imports"
+    "## Imports"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "id": "ae725422-ec9e-4ee4-bc95-012499cf117c",
    "metadata": {},
    "source": [
-    "# Check information"
+    "## Check information"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "id": "632dafeb-3ab5-4249-a035-729ed239485e",
    "metadata": {},
    "source": [
-    "### Chosse Rubin-LSST observation sites but other sites may be chosen"
+    "## Choose Rubin-LSST observation sites but other sites may be chosen"
    ]
   },
   {
@@ -182,7 +182,7 @@
    "id": "1070eded-26f6-4b27-abf9-c7bf9a08e89e",
    "metadata": {},
    "source": [
-    "# Typical transmission plot\n",
+    "## Typical transmission plot\n",
     "\n",
     "- show a typical transmission plot"
    ]
@@ -213,7 +213,7 @@
    "id": "1949a817-9985-48b0-8735-e5bcf8e285a9",
    "metadata": {},
    "source": [
-    "# Setting atmospheric parameters"
+    "## Setting atmospheric parameters"
    ]
   },
   {
@@ -256,10 +256,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7c1cbe1-8c44-4956-ad6d-965a70ffd6c0",
+   "id": "14c46002-3e77-457d-952d-1ea59230a327",
    "metadata": {},
    "source": [
-    "## Check emulator with Rayleigh scattering"
+    "# Check the emulator with the Rayleigh scattering process"
    ]
   },
   {
@@ -315,10 +315,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5febae6-7e6b-494e-be93-f570def732bc",
+   "id": "41d268fe-1646-4250-90ef-fa0730922dd6",
    "metadata": {},
    "source": [
-    "## Check emulator with Oxygen O2 absorption"
+    "# Check the emulator with the Oxygen absorption process"
    ]
   },
   {
