--- a/docs/notebooks/test_Docstrings.ipynb
+++ b/docs/notebooks/test_Docstrings.ipynb
@@ -10,23 +10,7 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2023/11/01\n",
-    "- last update : 2023/11/01\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "593c7f95-13c1-4ead-8403-446b5d5d2615",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "from scipy import interpolate\n",
-    "import seaborn as sns\n"
+    "- last update : 2023/11/02\n"
    ]
   },
   {
@@ -227,6 +211,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3304f534-f2af-46cd-bec3-95ff3dc161dc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "ffdf977e-2f4e-46aa-bb56-93f880cf0e95",
    "metadata": {},
    "source": [
@@ -296,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x177aa3e50>"
+       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x2ab46c550>"
       ]
      },
      "execution_count": 14,
@@ -380,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "78f4cd88-f5df-4dc5-8164-ce7d564bbd00",
    "metadata": {},
    "outputs": [
@@ -399,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "4dba3df6-22b3-4420-acc7-11175373e3f8",
    "metadata": {},
    "outputs": [
@@ -409,7 +399,7 @@
        "array([0.41483073, 0.76797745, 0.95170851, 0.98476396, 0.9937721 ])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,9 +409,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5b0c15c0-e352-44c2-8a2b-7f42078a6a71",
+   "metadata": {},
+   "source": [
+    "# Knowledge about grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b7da7ff1-13ae-4b7b-aea4-1d3ae142c396",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([300.        , 301.00125156, 302.00250313, 303.00375469,\n",
+       "       304.00500626, 305.00625782, 306.00750939, 307.00876095,\n",
+       "       308.01001252, 309.01126408])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emul.WL[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e86e6616-6c97-4553-8ef9-3d8f49296b18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1090.98873592, 1091.98998748, 1092.99123905, 1093.99249061,\n",
+       "       1094.99374218, 1095.99499374, 1096.99624531, 1097.99749687,\n",
+       "       1098.99874844, 1100.        ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emul.WL[-10:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3f872c8e-f5a7-45d0-b8f4-117908978355",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2. , 2.1, 2.2,\n",
+       "       2.3, 2.4, 2.5])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emul.AIRMASS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3cf35430-a16a-4f28-a5cc-a6f70da0a503",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.  ,  0.25,  0.5 ,  0.75,  1.  ,  1.25,  1.5 ,  1.75,  2.  ,\n",
+       "        2.25,  2.5 ,  2.75,  3.  ,  3.25,  3.5 ,  3.75,  4.  ,  4.25,\n",
+       "        4.5 ,  4.75,  5.  ,  5.25,  5.5 ,  5.75,  6.  ,  6.25,  6.5 ,\n",
+       "        6.75,  7.  ,  7.25,  7.5 ,  7.75,  8.  ,  8.25,  8.5 ,  8.75,\n",
+       "        9.  ,  9.25,  9.5 ,  9.75, 10.  , 10.25, 10.5 , 10.75])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emul.PWV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7dfbbbcc-9448-4798-b2eb-d999f63354d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,  25,  50,  75, 100, 125, 150, 175, 200, 225, 250, 275, 300,\n",
+       "       325, 350, 375, 400, 425, 450, 475, 500, 525, 550, 575])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emul.OZ"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc820ea3-fb89-403e-8a51-47d637a27aa2",
+   "id": "bfab8464-4967-43ab-8102-c3b153828189",
    "metadata": {},
    "outputs": [],
    "source": []
