correct typos, formatting, reduce number of attributes, repair some doctests, rationalize dependencies

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -18,32 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "593c7f95-13c1-4ead-8403-446b5d5d2615",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "from scipy import interpolate\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9bb23b04-5d1b-4393-8efa-b5553e973ac5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from getObsAtmo.getObsAtmo import ObsAtmo,Dict_Of_sitesPressures"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "id": "eeb7872a-03c9-421f-8fd7-6ba5c508ff79",
    "metadata": {
@@ -51,6 +25,7 @@
    },
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
@@ -61,7 +36,7 @@
     "         'axes.titlesize':'xx-large',\n",
     "         'xtick.labelsize':'xx-large',\n",
     "         'ytick.labelsize':'xx-large'}\n",
-    "plt.rcParams.update(params)\n"
+    "plt.rcParams.update(params)"
    ]
   },
   {
@@ -136,7 +111,7 @@
    "id": "632dafeb-3ab5-4249-a035-729ed239485e",
    "metadata": {},
    "source": [
-    "### Chosse Rubin-LSST observation sites but other sites may be chosen"
+    "### Choose Rubin-LSST observation sites but other sites may be chosen"
    ]
   },
   {
@@ -151,7 +126,7 @@
     "obs_str = 'LSST'\n",
     "std_pressure = Dict_Of_sitesPressures[obs_str]\n",
     "new_pressure = Dict_Of_sitesPressures[obs_str]*1.1\n",
-    "new_pressure\n",
+    "print(new_pressure)\n",
     "\n",
     "label1 = f\"P = {std_pressure:.0f} hPa\"\n",
     "label2 = f\"P = {new_pressure:.0f} hPa\""
@@ -271,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15f3bbd60>"
+       "<matplotlib.legend.Legend at 0x106743100>"
       ]
      },
      "execution_count": 12,
@@ -330,7 +305,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15f4c88e0>"
+       "<matplotlib.legend.Legend at 0x1408b8910>"
       ]
      },
      "execution_count": 13,
@@ -393,7 +368,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15f5936d0>"
+       "<matplotlib.legend.Legend at 0x14095be20>"
       ]
      },
      "execution_count": 14,
@@ -484,7 +459,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15f71db40>"
+       "<matplotlib.legend.Legend at 0x140b2a680>"
       ]
      },
      "execution_count": 16,
@@ -574,7 +549,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15f961720>"
+       "<matplotlib.legend.Legend at 0x140d55450>"
       ]
      },
      "execution_count": 18,
@@ -653,7 +628,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15fa3e5c0>"
+       "<matplotlib.legend.Legend at 0x140d56c80>"
       ]
      },
      "execution_count": 20,
@@ -706,7 +681,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15fac7d00>"
+       "<matplotlib.legend.Legend at 0x16c0bf970>"
       ]
      },
      "execution_count": 21,
@@ -821,7 +796,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15f639300>"
+       "<matplotlib.legend.Legend at 0x16c142da0>"
       ]
      },
      "execution_count": 24,
@@ -892,7 +867,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15fb98df0>"
+       "<matplotlib.legend.Legend at 0x16c1992d0>"
       ]
      },
      "execution_count": 25,
