should accept Auxtel name

--- a/docs/notebooks/plot_notebook.ipynb
+++ b/docs/notebooks/plot_notebook.ipynb
@@ -9,8 +9,8 @@
     "\n",
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
-    "- creation date : 2023/11/01\n",
-    "- last update : 2023/11/01\n",
+    "- creation date : 2023/12/02\n",
+    "- last update : 2023/12/02\n",
     "\n",
     "\n",
     "This emulator is based from datagrid of atmospheric transparencies extracted from libradtran"
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from getObsAtmo.getObsAtmo import ObsAtmo,Dict_Of_sitesPressures,getObsSiteDataFrame"
+    "from getObsAtmo.getObsAtmo import ObsAtmo,validateObsName,Dict_Of_sitesPressures,getObsSiteDataFrame"
    ]
   },
   {
@@ -132,7 +132,8 @@
     }
    ],
    "source": [
-    "obs_str = 'LSST'\n",
+    "obssitename = 'AuxTel '\n",
+    "obs_str = validateObsName(obssitename) \n",
     "std_pressure = Dict_Of_sitesPressures[obs_str]\n",
     "new_pressure = Dict_Of_sitesPressures[obs_str]*1.1\n",
     "print(new_pressure)\n",
@@ -157,8 +158,8 @@
     }
    ],
    "source": [
-    "emul1 =  ObsAtmo(obs_str=obs_str)\n",
-    "emul2 =  ObsAtmo(obs_str=obs_str,pressure = new_pressure)"
+    "emul1 =  ObsAtmo(obs_str= obssitename)\n",
+    "emul2 =  ObsAtmo(obs_str= obssitename,pressure = new_pressure)"
    ]
   },
   {
@@ -255,7 +256,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x161309c30>"
+       "<matplotlib.legend.Legend at 0x12bdbe530>"
       ]
      },
      "execution_count": 10,
@@ -314,7 +315,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1613b8a30>"
+       "<matplotlib.legend.Legend at 0x16804d1e0>"
       ]
      },
      "execution_count": 11,
@@ -377,7 +378,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1614a4520>"
+       "<matplotlib.legend.Legend at 0x168134640>"
       ]
      },
      "execution_count": 12,
@@ -468,7 +469,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x161651810>"
+       "<matplotlib.legend.Legend at 0x1682ed840>"
       ]
      },
      "execution_count": 14,
@@ -558,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x162100130>"
+       "<matplotlib.legend.Legend at 0x1684e9030>"
       ]
      },
      "execution_count": 16,
@@ -637,7 +638,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1621ced40>"
+       "<matplotlib.legend.Legend at 0x1685cb040>"
       ]
      },
      "execution_count": 18,
@@ -690,7 +691,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1621cdc30>"
+       "<matplotlib.legend.Legend at 0x1685f7880>"
       ]
      },
      "execution_count": 19,
@@ -950,7 +951,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1610abd00>"
+       "<matplotlib.legend.Legend at 0x12ba8c5e0>"
       ]
      },
      "execution_count": 26,
@@ -1021,7 +1022,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1622e7820>"
+       "<matplotlib.legend.Legend at 0x168721d20>"
       ]
      },
      "execution_count": 27,
