--- a/docs/notebooks/test_Docstrings.ipynb
+++ b/docs/notebooks/test_Docstrings.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9bb23b04-5d1b-4393-8efa-b5553e973ac5",
    "metadata": {},
    "outputs": [],
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bb4a4fcc-e721-455e-9719-1aff73573b02",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/dagoret/anaconda3/envs/conda_py310/lib/python3.10/site-packages/getObsAtmo-0.1.0-py3.10.egg/getObsAtmo'"
+       "'/Users/dagoret/anaconda3/envs/conda_py310/lib/python3.10/site-packages/getObsAtmo'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8bf39dcb-64b2-4ef9-a34e-5066d58c7959",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
        " 'OSL': 1013.0}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c8e905f7-217b-4a94-9aa5-f666a182f446",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bd14d37f-e514-4061-9d71-3cc5009971a4",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fc3b2bc0-8588-4311-a98a-246bd3f571b1",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "Index(['LSST', 'CTIO', 'OHP', 'PDM', 'OMK', 'OSL'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "88329e10-d9f2-4a64-9aaa-37f3c4aa3930",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c1a142e8-4c15-41be-a427-5f421340ca2f",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5340a52e-3266-425f-b81e-84b5490ac39d",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,10 +210,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3304f534-f2af-46cd-bec3-95ff3dc161dc",
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fe6a9e77-e4b3-4f4c-aacd-4ae2276fbc3c",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_obssite('AUXTEL')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -225,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "14394583-3853-4c06-bdcb-79dfd6946932",
    "metadata": {},
    "outputs": [
@@ -233,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observatory LSST found in preselected observation sites\n"
+      "LSST is OK\n"
      ]
     }
    ],
@@ -243,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "92c82ec3-f9b1-4cae-9624-f418658ed1dd",
    "metadata": {},
    "outputs": [
@@ -251,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observatory CTIO found in preselected observation sites\n"
+      "CTIO is OK\n"
      ]
     }
    ],
@@ -261,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6ca0e88b-e605-4068-a144-ce77b1ba283c",
    "metadata": {},
    "outputs": [
@@ -269,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observatory LSST found in preselected observation sites\n"
+      "LSST is OK\n"
      ]
     }
    ],
@@ -279,17 +294,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
+   "id": "74050069-a27d-4d6b-bae3-c02cba666274",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSST is OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "emul =  ObsAtmo('AuxTel',743.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "7246be3c-f43c-41f0-892d-9728fbd2acbd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x2ab46c550>"
+       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x13f545c90>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "88c4ee68-99e9-482b-b59e-6ed90c367369",
    "metadata": {},
    "outputs": [],
@@ -314,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "b6a0fda3-42ba-40ef-9e76-1fd6d206b975",
    "metadata": {},
    "outputs": [
@@ -334,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "718fcef4-d72d-4e3f-8aa0-b4e5e49c6ce0",
    "metadata": {},
    "outputs": [
@@ -352,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "cdda946f-6f46-4355-b92c-c9043116596d",
    "metadata": {},
    "outputs": [
@@ -370,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "78f4cd88-f5df-4dc5-8164-ce7d564bbd00",
    "metadata": {},
    "outputs": [
@@ -378,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Observatory LSST found in preselected observation sites\n"
+      "LSST is OK\n"
      ]
     }
    ],
@@ -389,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "4dba3df6-22b3-4420-acc7-11175373e3f8",
    "metadata": {},
    "outputs": [
@@ -399,7 +432,7 @@
        "array([0.41483073, 0.76797745, 0.95170851, 0.98476396, 0.9937721 ])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "b7da7ff1-13ae-4b7b-aea4-1d3ae142c396",
    "metadata": {},
    "outputs": [
@@ -430,7 +463,7 @@
        "       308.01001252, 309.01126408])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e86e6616-6c97-4553-8ef9-3d8f49296b18",
    "metadata": {},
    "outputs": [
@@ -453,7 +486,7 @@
        "       1098.99874844, 1100.        ])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "3f872c8e-f5a7-45d0-b8f4-117908978355",
    "metadata": {},
    "outputs": [
@@ -475,7 +508,7 @@
        "       2.3, 2.4, 2.5])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "3cf35430-a16a-4f28-a5cc-a6f70da0a503",
    "metadata": {},
    "outputs": [
@@ -497,10 +530,10 @@
        "        2.25,  2.5 ,  2.75,  3.  ,  3.25,  3.5 ,  3.75,  4.  ,  4.25,\n",
        "        4.5 ,  4.75,  5.  ,  5.25,  5.5 ,  5.75,  6.  ,  6.25,  6.5 ,\n",
        "        6.75,  7.  ,  7.25,  7.5 ,  7.75,  8.  ,  8.25,  8.5 ,  8.75,\n",
-       "        9.  ,  9.25,  9.5 ,  9.75, 10.  , 10.25, 10.5 , 10.75])"
+       "        9.  ,  9.25,  9.5 ,  9.75, 10.  ])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,18 +544,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "7dfbbbcc-9448-4798-b2eb-d999f63354d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  0,  25,  50,  75, 100, 125, 150, 175, 200, 225, 250, 275, 300,\n",
-       "       325, 350, 375, 400, 425, 450, 475, 500, 525, 550, 575])"
+       "array([  0.,  25.,  50.,  75., 100., 125., 150., 175., 200., 225., 250.,\n",
+       "       275., 300., 325., 350., 375., 400., 425., 450., 475., 500., 525.,\n",
+       "       550., 575., 600.])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
