--- a/docs/notebooks/test_Docstrings.ipynb
+++ b/docs/notebooks/test_Docstrings.ipynb
@@ -10,7 +10,7 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2023/11/01\n",
-    "- last update : 2023/11/02\n"
+    "- last update : 2024/08/27\n"
    ]
   },
   {
@@ -40,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/dagoret/anaconda3/envs/conda_py310/lib/python3.10/site-packages/getObsAtmo'"
+       "'/Users/dagoret/anaconda3/envs/conda_py310/lib/python3.10/site-packages/getObsAtmo-0.1.2-py3.10.egg/getObsAtmo'"
       ]
      },
      "execution_count": 2,
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "fe6a9e77-e4b3-4f4c-aacd-4ae2276fbc3c",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "14394583-3853-4c06-bdcb-79dfd6946932",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LSST is OK\n"
+      "LSST site name validated as LSST observatory\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "92c82ec3-f9b1-4cae-9624-f418658ed1dd",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CTIO is OK\n"
+      "CTIO site name validated as CTIO observatory\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6ca0e88b-e605-4068-a144-ce77b1ba283c",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LSST is OK\n"
+      "LSST site name validated as LSST observatory\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "74050069-a27d-4d6b-bae3-c02cba666274",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LSST is OK\n"
+      "AuxTel site name validated as LSST observatory\n"
      ]
     }
    ],
@@ -312,17 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "7246be3c-f43c-41f0-892d-9728fbd2acbd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x13f545c90>"
+       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x137695cf0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "88c4ee68-99e9-482b-b59e-6ed90c367369",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "b6a0fda3-42ba-40ef-9e76-1fd6d206b975",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
      "output_type": "stream",
      "text": [
       "wavelengths (nm) \t =  [400.0, 800.0, 900.0]\n",
-      "transmissions    \t =  [0.72485491 0.97330618 0.85675228]\n"
+      "transmissions    \t =  [0.72485488 0.97307426 0.85289521]\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "718fcef4-d72d-4e3f-8aa0-b4e5e49c6ce0",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "cdda946f-6f46-4355-b92c-c9043116596d",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.72485491 0.97330618 0.85675228]\n"
+      "[0.72485488 0.97307426 0.85289521]\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "78f4cd88-f5df-4dc5-8164-ce7d564bbd00",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LSST is OK\n"
+      "LSST site name validated as LSST observatory\n"
      ]
     }
    ],
@@ -422,17 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "4dba3df6-22b3-4420-acc7-11175373e3f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.41483073, 0.76797745, 0.95170851, 0.98476396, 0.9937721 ])"
+       "array([0.41483073, 0.76797691, 0.95073145, 0.97914163, 0.99319052])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "b7da7ff1-13ae-4b7b-aea4-1d3ae142c396",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "       308.01001252, 309.01126408])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "e86e6616-6c97-4553-8ef9-3d8f49296b18",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "       1098.99874844, 1100.        ])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "3f872c8e-f5a7-45d0-b8f4-117908978355",
    "metadata": {},
    "outputs": [
@@ -505,10 +505,10 @@
      "data": {
       "text/plain": [
        "array([1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2. , 2.1, 2.2,\n",
-       "       2.3, 2.4, 2.5])"
+       "       2.3, 2.4, 2.5, 2.6])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "3cf35430-a16a-4f28-a5cc-a6f70da0a503",
    "metadata": {},
    "outputs": [
@@ -530,10 +530,12 @@
        "        2.25,  2.5 ,  2.75,  3.  ,  3.25,  3.5 ,  3.75,  4.  ,  4.25,\n",
        "        4.5 ,  4.75,  5.  ,  5.25,  5.5 ,  5.75,  6.  ,  6.25,  6.5 ,\n",
        "        6.75,  7.  ,  7.25,  7.5 ,  7.75,  8.  ,  8.25,  8.5 ,  8.75,\n",
-       "        9.  ,  9.25,  9.5 ,  9.75, 10.  ])"
+       "        9.  ,  9.25,  9.5 ,  9.75, 10.  , 10.25, 10.5 , 10.75, 11.  ,\n",
+       "       11.25, 11.5 , 11.75, 12.  , 12.25, 12.5 , 12.75, 13.  , 13.25,\n",
+       "       13.5 , 13.75, 14.  , 14.25, 14.5 , 14.75, 15.  , 15.25])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "7dfbbbcc-9448-4798-b2eb-d999f63354d4",
    "metadata": {},
    "outputs": [
@@ -553,10 +555,10 @@
       "text/plain": [
        "array([  0.,  25.,  50.,  75., 100., 125., 150., 175., 200., 225., 250.,\n",
        "       275., 300., 325., 350., 375., 400., 425., 450., 475., 500., 525.,\n",
-       "       550., 575., 600.])"
+       "       550., 575., 600., 625.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
