fit attenuation lines in pwv and ozone

--- a/docs/notebooks/plot_ozonevsairmass.ipynb
+++ b/docs/notebooks/plot_ozonevsairmass.ipynb
@@ -32,7 +32,7 @@
     "import pickle\n",
     "# to enlarge the sizes\n",
     "params = {'legend.fontsize': 'large',\n",
-    "          'figure.figsize': (12, 8),\n",
+    "          'figure.figsize': (10, 6),\n",
     "         'axes.labelsize': 'x-large',\n",
     "         'axes.titlesize':'x-large',\n",
     "         'xtick.labelsize':'x-large',\n",
@@ -485,9 +485,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbac3cf1-883a-44a5-b741-68ef3690c77f",
+   "metadata": {},
+   "source": [
+    "## Fit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94295604-64d0-4eda-b265-cf54822d5fae",
+   "id": "73cb5552-d0e7-413b-ac14-3dd85d33cbf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xfit = np.linspace(np.log(airmasses).min(),np.log(airmasses).max(),50)\n",
+    "fig, ax = plt.subplots()\n",
+    "for idx,wl in enumerate(WLtest):\n",
+    "    color = hls_colors[idx]\n",
+    "    x = np.log(airmasses)\n",
+    "    y = np.log(transmarray1[:,idx])\n",
+    "    z = np.polyfit(x[2:], y[2:], deg=1)\n",
+    "    p = np.poly1d(z)\n",
+    "    gamma = z[0]\n",
+    "    const = z[1]\n",
+    "    label = \"$\\\\lambda$ = \"+f\"{wl:.0f} nm\"+ f\"fit : slope = {gamma:.3f} const = {const:.3f}\"\n",
+    "    ax.plot(x,y,'-o',color=color,lw=5,label=label)\n",
+    "    ax.plot(xfit,p(xfit),\":k\")\n",
+    "   \n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "ax.set_title(f\"Ozone attenuation with airmass for oz = 300 DU\")\n",
+    "ax.set_ylabel(\"Ozone relative attenuation\")\n",
+    "ax.set_xlabel(\"airmass\")\n",
+    "#ax.set_ylim(0.8,1.01)\n",
+    "#ax.set_xlim(1,airmasses.max())\n",
+    "#ax.set_xscale(\"log\")\n",
+    "#ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2733ac74-4fe6-4945-9c19-ea77e82e9020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xfit = np.linspace(np.log(airmasses).min(),np.log(airmasses).max(),50)\n",
+    "fig, ax = plt.subplots()\n",
+    "for idx,wl in enumerate(WLtest):\n",
+    "    color = hls_colors[idx]\n",
+    "    x = np.log(airmasses)\n",
+    "    y = np.log(transmarray2[:,idx])\n",
+    "    z = np.polyfit(x[2:], y[2:], deg=1)\n",
+    "    p = np.poly1d(z)\n",
+    "    gamma = z[0]\n",
+    "    const = z[1]\n",
+    "    label = \"$\\\\lambda$ = \"+f\"{wl:.0f} nm\"+ f\"fit : slope = {gamma:.3f} const = {const:.3f}\"\n",
+    "    ax.plot(x,y,'-o',color=color,lw=5,label=label)\n",
+    "    ax.plot(xfit,p(xfit),\":k\")\n",
+    "   \n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "ax.set_title(f\"Ozone attenuation with airmass for oz = 600 DU\")\n",
+    "ax.set_ylabel(\"Ozone relative attenuation\")\n",
+    "ax.set_xlabel(\"airmass\")\n",
+    "#ax.set_ylim(0.8,1.01)\n",
+    "#ax.set_xlim(1,airmasses.max())\n",
+    "#ax.set_xscale(\"log\")\n",
+    "#ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa917f9f-b161-447e-8606-68156378a9b9",
    "metadata": {},
    "outputs": [],
    "source": []
