--- a/docs/notebooks/plot_pwvvsairmass.ipynb
+++ b/docs/notebooks/plot_pwvvsairmass.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "# to enlarge the sizes\n",
     "params = {'legend.fontsize': 'large',\n",
-    "          'figure.figsize': (12, 8),\n",
+    "          'figure.figsize': (10, 6),\n",
     "         'axes.labelsize': 'xx-large',\n",
     "         'axes.titlesize':'xx-large',\n",
     "         'xtick.labelsize':'xx-large',\n",
@@ -274,11 +274,11 @@
    "outputs": [],
    "source": [
     "PWV0 = 5.0\n",
-    "transmarray = np.zeros((NAM,NWLtest))\n",
+    "transmarray1 = np.zeros((NAM,NWLtest))\n",
     "for idx,airmass in enumerate(airmasses):\n",
-    "    transmarray[idx,:]  = emul.GetPWVabsTransparencyArray(WLtest,airmass,PWV0)\n",
+    "    transmarray1[idx,:]  = emul.GetPWVabsTransparencyArray(WLtest,airmass,PWV0)\n",
     "for idx,airmass in enumerate(airmasses):\n",
-    "     transmarray[idx,:] =  transmarray[idx,:]/transmarray[0,:]"
+    "     transmarray1[idx,:] =  transmarray1[idx,:]/transmarray1[0,:]"
    ]
   },
   {
@@ -292,13 +292,13 @@
     "for idx,wl in enumerate(WLtest):\n",
     "    color = hls_colors[idx]\n",
     "    label = \"$\\\\lambda$ = \"+f\"{wl:.0f} nm\"\n",
-    "    ax.plot(airmasses,transmarray[:,idx],'-o',color=color,lw=5,label=label)\n",
+    "    ax.plot(airmasses,transmarray1[:,idx],'-o',color=color,lw=5,label=label)\n",
     "ax.legend()\n",
     "ax.grid()\n",
     "ax.set_title(f\"PWV attenuation with airmass for PWV = {PWV0} mm\")\n",
     "ax.set_ylabel(\"PWV relative attenuation\")\n",
     "ax.set_xlabel(\"airmass\")\n",
-    "ax.set_ylim(0.2,1.01)\n",
+    "ax.set_ylim(0.2,1.1)\n",
     "ax.set_xscale(\"log\")\n",
     "ax.set_yscale(\"log\")"
    ]
@@ -311,11 +311,11 @@
    "outputs": [],
    "source": [
     "PWV0 = 10.0\n",
-    "transmarray = np.zeros((NAM,NWLtest))\n",
+    "transmarray2 = np.zeros((NAM,NWLtest))\n",
     "for idx,airmass in enumerate(airmasses):\n",
-    "    transmarray[idx,:]  = emul.GetPWVabsTransparencyArray(WLtest,airmass,PWV0)\n",
+    "    transmarray2[idx,:]  = emul.GetPWVabsTransparencyArray(WLtest,airmass,PWV0)\n",
     "for idx,airmass in enumerate(airmasses):\n",
-    "     transmarray[idx,:] =  transmarray[idx,:]/transmarray[0,:]"
+    "     transmarray2[idx,:] =  transmarray2[idx,:]/transmarray2[0,:]"
    ]
   },
   {
@@ -329,7 +329,7 @@
     "for idx,wl in enumerate(WLtest):\n",
     "    color = hls_colors[idx]\n",
     "    label = \"$\\\\lambda$ = \"+f\"{wl:.0f} nm\"\n",
-    "    ax.plot(airmasses,transmarray[:,idx],'-o',color=color,lw=5,label=label)\n",
+    "    ax.plot(airmasses,transmarray2[:,idx],'-o',color=color,lw=5,label=label)\n",
     "ax.legend()\n",
     "ax.grid()\n",
     "ax.set_title(f\"PWV attenuation with airmass for PWV = {PWV0} mm\")\n",
@@ -341,9 +341,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21053265-0fec-44c7-b96f-55d756126033",
+   "metadata": {},
+   "source": [
+    "## Fit "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37bf54ee-7a8a-4767-ae0d-284cfcf4f31c",
+   "id": "5347b471-065f-412b-8586-77aea570d299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xfit = np.linspace(np.log(airmasses).min(),np.log(airmasses).max(),50)\n",
+    "fig, ax = plt.subplots()\n",
+    "for idx,wl in enumerate(WLtest):\n",
+    "    color = hls_colors[idx]\n",
+    "    x = np.log(airmasses)\n",
+    "    y = np.log(transmarray1[:,idx])\n",
+    "    z = np.polyfit(x[2:], y[2:], deg=1)\n",
+    "    p = np.poly1d(z)\n",
+    "    gamma = z[0]\n",
+    "    const = z[1]\n",
+    "    label = \"$\\\\lambda$ = \"+f\"{wl:.0f} nm\"+ f\"fit : slope = {gamma:.3f} const = {const:.3f}\"\n",
+    "    ax.plot(x,y,'-o',color=color,lw=5,label=label)\n",
+    "    ax.plot(xfit,p(xfit),\":k\")\n",
+    "   \n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "ax.set_title(f\"PWV attenuation with airmass for PWV = 5 mm\")\n",
+    "ax.set_ylabel(\"PWV relative attenuation\")\n",
+    "ax.set_xlabel(\"airmass\")\n",
+    "#ax.set_ylim(0.8,1.01)\n",
+    "#ax.set_xlim(1,airmasses.max())\n",
+    "#ax.set_xscale(\"log\")\n",
+    "#ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d98051e-c065-49b4-acc0-b3a521e877e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xfit = np.linspace(np.log(airmasses).min(),np.log(airmasses).max(),50)\n",
+    "fig, ax = plt.subplots()\n",
+    "for idx,wl in enumerate(WLtest):\n",
+    "    color = hls_colors[idx]\n",
+    "    x = np.log(airmasses)\n",
+    "    y = np.log(transmarray2[:,idx])\n",
+    "    z = np.polyfit(x[2:], y[2:], deg=1)\n",
+    "    p = np.poly1d(z)\n",
+    "    gamma = z[0]\n",
+    "    const = z[1]\n",
+    "    label = \"$\\\\lambda$ = \"+f\"{wl:.0f} nm\"+ f\"fit : slope = {gamma:.3f} const = {const:.3f}\"\n",
+    "    ax.plot(x,y,'-o',color=color,lw=5,label=label)\n",
+    "    ax.plot(xfit,p(xfit),\":k\")\n",
+    "   \n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "ax.set_title(f\"PWV attenuation with airmass for PWV = 10 mm\")\n",
+    "ax.set_ylabel(\"PWV relative attenuation\")\n",
+    "ax.set_xlabel(\"airmass\")\n",
+    "#ax.set_ylim(0.8,1.01)\n",
+    "#ax.set_xlim(1,airmasses.max())\n",
+    "#ax.set_xscale(\"log\")\n",
+    "#ax.set_yscale(\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74c3c397-ab6e-4f02-909b-0324a133e37a",
    "metadata": {},
    "outputs": [],
    "source": []
