correct the bug on norm

--- a/docs/notebooks/plot_o2vsairmass.ipynb
+++ b/docs/notebooks/plot_o2vsairmass.ipynb
@@ -382,8 +382,9 @@
     "transmarray = np.zeros((NAM,NWLtest))\n",
     "for idx,airmass in enumerate(airmasses):\n",
     "    transmarray[idx,:]  = emul.GetO2absTransparencyArray(WLtest,airmass)\n",
+    "norm = np.copy(transmarray[0,:])\n",
     "for idx,airmass in enumerate(airmasses):\n",
-    "     transmarray[idx,:] =  transmarray[idx,:]/transmarray[0,:]"
+    "     transmarray[idx,:] =  transmarray[idx,:]/norm"
    ]
   },
   {
