--- a/docs/notebooks/plot_transmvsozxairmass.ipynb
+++ b/docs/notebooks/plot_transmvsozxairmass.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "83d67aeb-3ef6-486b-86e8-a18aadf14659",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "Text(0.5, 1.0, 'Ozone Air transmission vs $airmass \\\\times ozone$')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "29dfaa10-2087-417a-b413-6ece0d5c7697",
    "metadata": {},
    "outputs": [
@@ -692,7 +692,7 @@
        "Text(0.5, 1.0, 'Ozone extinction vs $airmass \\\\times ozone$')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -750,8 +750,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "9dc128f4-7f47-4496-8140-a80c9c92c2f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.  , 1.01, 1.02, 1.03, 1.04, 1.05, 1.06, 1.07, 1.08, 1.09, 1.1 ,\n",
+       "       1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.19, 1.2 , 1.3 ,\n",
+       "       1.4 , 1.5 , 1.6 , 1.7 , 1.8 , 1.9 , 2.  , 2.1 , 2.2 , 2.3 , 2.4 ,\n",
+       "       2.5 ])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "airmasses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "572df92c-de49-4b8f-b932-06fb04d10634",
    "metadata": {},
    "outputs": [],
    "source": []
