--- a/docs/notebooks/plot_transmvspwvxairmass.ipynb
+++ b/docs/notebooks/plot_transmvspwvxairmass.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "ec518b50-4c5b-47a8-bce7-cd59e94b007a",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "        2.6826958 ,  5.17947468, 10.        ])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "e66703a8-b903-4c82-8e9b-bbfecc2ae2eb",
    "metadata": {},
    "outputs": [],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "3d5658af-f949-4285-bb59-64a3b38d74dc",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "Text(0.5, 1.0, 'PWV Air transmission vs $airmass \\\\times pwv$')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -487,7 +487,7 @@
     "    for idx_am,airmass in enumerate(airmasses):\n",
     "        transmarray[idx_am,:]  = emul.GetPWVabsTransparencyArray(WLtest,airmass,pwv0)\n",
     "    # normalize wrt airmass = 1 for each wavelength\n",
-    "    norm_am0 = np.copy(transmarray[0,:])\n",
+    "    #norm_am0 = np.copy(transmarray[0,:])\n",
     "    \n",
     "    # renormalize to first airmass\n",
     "    #for idx_am,airmass in enumerate(airmasses):\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "e8da9fe3-ce55-4d4e-ac75-9aff156481f0",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
        "Text(0.5, 1.0, 'PWV Air extinction vs $airmass \\\\times pwv$')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
