--- a/docs/notebooks/test_Docstrings.ipynb
+++ b/docs/notebooks/test_Docstrings.ipynb
@@ -10,7 +10,8 @@
     "- author : Sylvie Dagoret-Campagne\n",
     "- affiliation : IJCLab/IN2P3/CNRS\n",
     "- creation date : 2023/11/01\n",
-    "- last update : 2024/08/27\n"
+    "- update : 2024/08/27\n",
+    "- last update : 2025/06/15\n"
    ]
   },
   {
@@ -40,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/dagoret/anaconda3/envs/conda_py310/lib/python3.10/site-packages/getObsAtmo-0.1.2-py3.10.egg/getObsAtmo'"
+       "'/Users/dagoret/miniconda3/envs/conda_py313/lib/python3.13/site-packages/getObsAtmo'"
       ]
      },
      "execution_count": 2,
@@ -74,6 +75,8 @@
        "{'LSST': 731.50433,\n",
        " 'CTIO': 774.6052,\n",
        " 'OHP': 937.22595,\n",
+       " 'ZTF': 823.60004,\n",
+       " 'VLT': 734.08038,\n",
        " 'PDM': 710.90637,\n",
        " 'OMK': 600.17224,\n",
        " 'OSL': 1013.0}"
@@ -110,6 +113,8 @@
       "LSST    2.663  731.50433\n",
       "CTIO    2.207   774.6052\n",
       "OHP      0.65  937.22595\n",
+      "ZTF     1.712  823.60004\n",
+      "VLT     2.635  734.08038\n",
       "PDM    2.8905  710.90637\n",
       "OMK     4.205  600.17224\n",
       "OSL       0.0     1013.0\n"
@@ -139,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['LSST', 'CTIO', 'OHP', 'PDM', 'OMK', 'OSL'], dtype='object')"
+       "Index(['LSST', 'CTIO', 'OHP', 'ZTF', 'VLT', 'PDM', 'OMK', 'OSL'], dtype='object')"
       ]
      },
      "execution_count": 6,
@@ -166,6 +171,8 @@
        "3    False\n",
        "4    False\n",
        "5    False\n",
+       "6    False\n",
+       "7    False\n",
        "dtype: bool"
       ]
      },
@@ -197,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "np.True_"
       ]
      },
      "execution_count": 9,
@@ -218,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "np.True_"
       ]
      },
      "execution_count": 10,
@@ -319,7 +326,7 @@
     {
      "data": {
       "text/plain": [
-       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x137695cf0>"
+       "<getObsAtmo.getObsAtmo.ObsAtmo at 0x11cf92990>"
       ]
      },
      "execution_count": 15,
@@ -356,7 +363,7 @@
      "output_type": "stream",
      "text": [
       "wavelengths (nm) \t =  [400.0, 800.0, 900.0]\n",
-      "transmissions    \t =  [0.72485488 0.97307426 0.85289521]\n"
+      "transmissions    \t =  [0.72485491 0.97330618 0.85675228]\n"
      ]
     }
    ],
@@ -393,7 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.72485488 0.97307426 0.85289521]\n"
+      "[0.72485491 0.97330618 0.85675228]\n"
      ]
     }
    ],
@@ -429,7 +436,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.41483073, 0.76797691, 0.95073145, 0.97914163, 0.99319052])"
+       "array([0.41483073, 0.76797745, 0.95170851, 0.98476396, 0.9937721 ])"
       ]
      },
      "execution_count": 21,
@@ -532,7 +539,10 @@
        "        6.75,  7.  ,  7.25,  7.5 ,  7.75,  8.  ,  8.25,  8.5 ,  8.75,\n",
        "        9.  ,  9.25,  9.5 ,  9.75, 10.  , 10.25, 10.5 , 10.75, 11.  ,\n",
        "       11.25, 11.5 , 11.75, 12.  , 12.25, 12.5 , 12.75, 13.  , 13.25,\n",
-       "       13.5 , 13.75, 14.  , 14.25, 14.5 , 14.75, 15.  , 15.25])"
+       "       13.5 , 13.75, 14.  , 14.25, 14.5 , 14.75, 15.  , 15.25, 15.5 ,\n",
+       "       15.75, 16.  , 16.25, 16.5 , 16.75, 17.  , 17.25, 17.5 , 17.75,\n",
+       "       18.  , 18.25, 18.5 , 18.75, 19.  , 19.25, 19.5 , 19.75, 20.  ,\n",
+       "       20.25])"
       ]
      },
      "execution_count": 25,
@@ -578,9 +588,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_py310",
+   "display_name": "conda_py313",
    "language": "python",
-   "name": "conda_py310"
+   "name": "conda_py313"
   },
   "language_info": {
    "codemirror_mode": {
@@ -592,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.3"
   },
   "vscode": {
    "interpreter": {
